[package]
name = "workflow-allocator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/workflow-rs/workflow-allocator"
keywords = ["wasm","framework","transport","solana","bpf","contract"]
categories = []
exclude = ["/.*", "/test"]
description = """
Solana Program framework for developing Solana Programs 
and async Rust client-side web applications 
"""

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["full"]
check-buffer-sizes = []
test = []
full = [
    "check-buffer-sizes"
] 

[dependencies]
solana-program = {path = "../solana/sdk/program"}
# solana-program = "1.11.4"
spl-token = { path = "../solana-program-library/token/program", features = [ "no-entrypoint" ] }
# spl-token = { version = "3.3", features = [ "no-entrypoint" ] }

workflow-allocator-macros = { path = "macros" }
workflow-core = { path = "../workflow-core" }
workflow-log = { path = "../workflow-log" }
workflow-wasm = { path = "../workflow-wasm" }

cfg-if = "1.0.0"
borsh = "0.9.1"
borsh-derive = "0.9.1"
thiserror = "1.0"
bincode = "1.3.1"
num-traits = "0.2.14"
num = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# [target.'cfg(not(target_arch = "bpf"))'.dev-dependencies]

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
solana-sdk = {path = "../solana/sdk", features = ['full']}
# solana-sdk = {version="1.11.4", features = ['full']}

workflow-core = { path = "../workflow-core" }
workflow-rpc = { path = "../workflow-rpc" }
workflow-wasm = { path = "../workflow-wasm" }

rand = "0.7.3"
async-std = { version = "1.12.0", features = ['attributes'] }
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
derivative = "2.2.0"
smallvec = "1.8.0"
pgp = "0.7.2"
async-trait = "0.1.56"
ahash = "0.8.0"
caches = "0.2.2"
inventory = "0.2.3"
futures = "0.3.21"
manual_future = "0.1.1"
hexplay = "0.2.1"
regex = "1.6.0"
downcast = "0.11.0"
owning_ref = "0.4.1"

# atomic-instant = "0.1.1"
# thiserror = "1.0.32"


[target.'cfg(not(any(target_arch = "bpf", target_arch = "wasm32")))'.dependencies]
lazy_static = "1.4.0"
# moka = { path = "../moka" }
moka = { git = "http://github.com/aspectron/moka" }
solana-client = {path = "../solana/client"}
home = "0.5.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
moka = { git = "http://github.com/aspectron/moka", default_features = false, features = ['js'] }
