[package]
name = "kaizen"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/solana-kaizen/kaizen"
keywords = ["wasm","framework","transport","solana","bpf","contract"]
categories = []
exclude = ["/.*", "/test"]
description = """
Solana OS Rust framework for industrial grade applications.
"""

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["full"]
check-buffer-sizes = []
test = []
full = [
    "check-buffer-sizes"
] 

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
cfg-if = "1.0.0"
kaizen-macros = { path = "macros" }
num = "0.4.0"
num-traits = "0.2.15"
serde = { version = "1.0.152", features = ["derive"] }
solana-program = "1.15.0"
spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }
workflow-core = { path = "../workflow-rs/core" }
workflow-log = { path = "../workflow-rs/log", features = ["solana"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
ahash = "0.8.3"
async-std = { version = "1.12.0", features = ['attributes'] }
async-trait = "0.1.64"
bincode = "1.3.3"
caches = "0.2.3"
chrono = "0.4.23"
derivative = "2.2.0"
downcast = "0.11.0"
futures = "0.3.26"
hexplay = "0.2.1"
inventory = "0.3.3"
js-sys = "0.3.61"
manual_future = "0.1.1"
owning_ref = "0.4.1"
rand = "0.8.5"
regex = "1.7.1"
serde_json = "1.0.91"
smallvec = "1.10.0"
solana-sdk = { version = "1.15.0", features = ['full'] }
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
workflow-panic-hook = { path = "../workflow-rs/panic-hook" }
workflow-rpc = { path = "../workflow-rs/rpc" }
workflow-wasm = { path = "../workflow-rs/wasm" }

[target.'cfg(not(any(target_os = "solana", target_arch = "wasm32")))'.dependencies]
home = "0.5.4"
lazy_static = "1.4.0"
moka = { git = "http://github.com/aspectron/moka" }
solana-client = "1.15.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
moka = { git = "http://github.com/aspectron/moka", default_features = false, features = ['js'] }

